# MedDutiesRevisited

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  messages.pot  pyproject.toml
.githooks/: pre-commit
algorithm/: doctor.py  duty_setter.py  enums.py  exceptions.py  main.py  schedule.py  serializers.py  strain.py  utils.py  validators.py
algorithm/e2e_tests/: e2e_tests.py
algorithm/tests/: __init__.py  data.py  e2e_tests.py  test_doctor.py  test_duty_setter.py  test_main.py  test_schedule.py  test_serializers.py  test_strain.py  test_translation.py  test_utils.py  test_validators.py  utils.py
algorithm/translation/: __init__.py  enums.py  serializers.py  utils.py
algorithm/translation/locales/en/LC_MESSAGES/: messages.mo  messages.po
algorithm/translation/locales/pl/LC_MESSAGES/: messages.mo  messages.po
dev/: locale.sh  shell.sh  test.sh  test_e2e.sh
web/: app.py  serializers.py
